<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="#F2F5F2"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/main_AddUser_first_name"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/add_user_dialog_fragment_first_name_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/main_AddUser_last_name"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/add_user_dialog_fragment_last_name_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_AddUser_first_name" />

    <EditText
        android:id="@+id/main_AddUser_email"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/add_user_dialog_fragment_email_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_AddUser_last_name" />

    <EditText
        android:id="@+id/main_AddUser_avatar"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/add_user_dialog_fragment_avatar_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_AddUser_email" />

    <Button
        android:id="@+id/main_AddUserDialogFragmentCancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_user_dialog_fragment_cancel_btn_Txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/main_AddUserDialogFragmentOkBtn"
        app:layout_constraintTop_toBottomOf="@+id/main_AddUser_avatar" />

    <Button
        android:id="@+id/main_AddUserDialogFragmentOkBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_user_dialog_fragment_ok_btn_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/main_AddUserDialogFragmentCancelBtn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_AddUser_avatar"/>

</androidx.constraintlayout.widget.ConstraintLayout>